# inspektr

./: .gitignore  .release-plz.toml  Cargo.toml  README.md  versions.json
.github/workflows/: assets.yml  benchmark.yml  build-db.yml  check.yml  release.yml  safety.yml  test.yml  website.yml
0.1.0/: 404.html  index.html  sitemap.xml
0.1.0/development/adding-ecosystems/: index.html
0.1.0/development/architecture/: index.html
0.1.0/development/database-schema/: index.html
0.1.0/ecosystems/languages/: index.html
0.1.0/ecosystems/os/: index.html
0.1.0/getting-started/: index.html
0.1.0/search/: search_index.json
0.1.0/usage/ci-cd/: index.html
0.1.1/: 404.html  index.html  sitemap.xml
0.1.1/getting-started/: index.html
0.1.1/search/: search_index.json
0.1.2/: 404.html  index.html  sitemap.xml
0.1.2/getting-started/: index.html
0.1.2/search/: search_index.json
0.1.3/: 404.html  index.html  sitemap.xml
0.1.3/getting-started/: index.html
0.1.4/: 404.html  index.html  sitemap.xml
0.1.4/getting-started/: index.html
0.1.5/: 404.html  index.html  sitemap.xml
0.1.5/getting-started/: index.html
0.1.6/: 404.html  index.html  sitemap.xml
0.1.6/getting-started/: index.html
0.1.7/: 404.html  index.html  sitemap.xml
0.1.7/getting-started/: index.html
0.1.7/search/: search_index.json
0.1.8/: 404.html  index.html  sitemap.xml
0.1.8/getting-started/: index.html
0.1.9/: 404.html  index.html  sitemap.xml
0.1.9/getting-started/: index.html
benchmarks/: 01-setup.sh  02-scan.sh  03-analyze.py  04-report.py  analyze_gaps.py  config.sh  requirements.txt  run.sh
inspektr/: CHANGELOG.md  Cargo.toml
inspektr/src/: error.rs  lib.rs  pipeline.rs
inspektr/src/cataloger/: conan.rs  dotnet.rs  golang.rs  java.rs  javascript.rs  mod.rs  php.rs  python.rs  ruby.rs  rust_lang.rs  swift.rs  vcpkg.rs
inspektr/src/cataloger/java/: archive.rs  mod.rs  source.rs
inspektr/src/cataloger/os/: apk.rs  dpkg.rs  mod.rs  rpm.rs
inspektr/src/cpe/: mappings.rs  mod.rs
inspektr/src/db/: azure_linux.rs  bottlerocket.rs  mod.rs  nvd.rs  oracle.rs  osv.rs  oval.rs  photon.rs  store.rs
inspektr/src/models/: mod.rs
inspektr/src/oci/: mod.rs  pull.rs  push.rs
inspektr/src/sbom/: cyclonedx.rs  mod.rs  spdx.rs
inspektr/src/source/: detect.rs  filesystem.rs  mod.rs  oci.rs
inspektr/src/vuln/: matcher.rs  mod.rs  report.rs
inspektr/tests/: integration.rs
inspektr_cli/: CHANGELOG.md  Cargo.toml
inspektr_cli/src/: main.rs
looking_glass/: Cargo.toml
looking_glass/src/: error.rs  lib.rs  pipeline.rs
looking_glass/src/cataloger/: conan.rs  dotnet.rs  golang.rs  java.rs  javascript.rs  mod.rs  php.rs  python.rs  ruby.rs  rust_lang.rs  swift.rs  vcpkg.rs
looking_glass/src/cataloger/os/: apk.rs  rpm.rs
looking_glass/src/cpe/: mappings.rs
looking_glass/src/db/: mod.rs  nvd.rs  osv.rs  store.rs
looking_glass/src/models/: mod.rs
looking_glass/src/oci/: mod.rs  pull.rs  push.rs
looking_glass/src/sbom/: cyclonedx.rs  mod.rs  spdx.rs
looking_glass/src/source/: detect.rs  filesystem.rs  oci.rs
looking_glass/src/vuln/: matcher.rs  report.rs
looking_glass/tests/: integration.rs
looking_glass_cli/: Cargo.toml
looking_glass_cli/src/: main.rs
test-fixtures/dotnet/: packages.lock.json
test-fixtures/go/: go.mod
test-fixtures/java/: pom.xml
test-fixtures/javascript/: package-lock.json
test-fixtures/python/: requirements.txt
website/: mkdocs.yml
website/docs/: getting-started.md  index.md  library.md
(+115 files in other folders)
