[package]
name = "inspektr"
version = "0.1.2"
edition = "2024"
license-file = "../LICENSE"
description = "A software composition analysis (SCA) tool for generating Software Bills of Materials (SBOM) and scanning for known vulnerabilities."
readme = "../README.md"

[features]
default = []
db-admin = ["dep:zip", "dep:quick-xml", "dep:bzip2"]

[dependencies]
goblin = "0.9"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
semver = { version = "1", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
rusqlite = { version = "0.32", features = ["bundled"] }
zip = { version = "2", optional = true }
quick-xml = { version = "0.37", features = ["serialize"], optional = true }
bzip2 = { version = "0.5", optional = true }
reqwest = { version = "0.12", features = ["blocking"] }
oci-distribution = "0.11"
tokio = { version = "1", features = ["rt-multi-thread"] }
flate2 = "1"
tar = "0.4"
base64 = "0.22"
toml = "0.8"

[dev-dependencies]
tempfile = "3"
