[package]
name = "inspektr_cli"
version = "0.1.9"
edition = "2024"
license-file = "../LICENSE"
description = "A software composition analysis (SCA) tool for generating Software Bills of Materials (SBOM) and scanning for known vulnerabilities."
readme = "../README.md"

[features]
default = []
db-admin = ["inspektr/db-admin"]

[dependencies]
inspektr = { path = "../inspektr", version = "0.1.9" }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
